k8s/apps/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ngo-service
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: donation-service
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: volunteer-service
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
